--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-This file contains some of my homeworks I've uploaded during my studies to github
+This file contains some of our work in the first final project (out of two) of our studies.
