--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-This file contains some of our work in the first final project (out of two) of our studies.
+This file contains some of our work in the first final project (out of two).
